--- a/calci.css
+++ b/calci.css
@@ -52,17 +52,50 @@ box-shadow: 12px 12px 20px #cbced1,
     outline: none;
     margin: 5px;
     border-radius: 4px;
-    box-shadow: 5px 5px 8px #00000020,
+    box-shadow: 5px 5px 8px #43b39e20,
                -5px -5px 8px #ffffff; 
+               transition: .1s;
 }
-btns.row button:hover;
+
+
+
+.btns .row button:hover
 {
-    box-shadow: insert 5px 5px 8px rgba(16,16,16,.1),
-                insert -5px -5px 8px #fff;
-                background: #fff;
+    box-shadow: inset 5px 5px 8px rgba(16 16 166 .1),
+                inset -5px -5px 8px #fff;
+                background: #ffffff ;
+        
 }
 
 #eval
 {
-    background:
+    background: #29e6d6;
+    color: #fff;
+    box-shadow: inset 5px 5px 8px #66d9ff;
+                inset: -5px -5px 8px #00ace6;
+}
+
+#eval:hover
+{box-shadow: inset 5px 5px 8px #00ace6;
+             inset: -5px -5px 8px #00ace6;
+}
+
+#ac
+{
+    background: #fd7cabf7;
+    color: #fff;
+}
+#ac:hover 
+{box-shadow: inset 5px 5px 8px #f21b7fa9;
+             inset: -5px -5px 8px #f21b7fa9;
+}
+
+#ce
+{
+    background: #9849ffd5;
+    color: #fff;
+}
+#ce:hover 
+{box-shadow: inset 5px 5px 8px #5b36d4a9;
+             inset: -5px -5px 8px #5b36d4a9;
 }
