javascript new features

--- a/calci.css
+++ b/calci.css
@@ -79,3 +79,12 @@ color: #fff;
 {box-shadow: inset 5px 5px 8px #5b36d4a9;
          inset: -5px -5px 8px #5b36d4a9;
 }
+/* .left{
+    display:inline-block;
+    border: 2px solid red;
+    top:0px;
+    position:absolute;
+    left:30px;
+    margin-top: 23px;
+
+} */
