--- a/calci.css
+++ b/calci.css
@@ -11,17 +11,17 @@ background: #ecf0f3;
 
 .container
 {
-width: 55%;
-height: 55vh;
+width: 45%;
+height: auto;
 padding: 10px;
 border-radius: 8px;
-box-shadow: 12px 12px 20px #cbced1,
-            -12px -12px 20px #ffffff;
+background-color: #ffffff;
+
 }
 
 .display #screen
 {
-    width: 97%;
+    width: 92%;
     height: 70px;
     font-size: 35px;
     outline: none;
@@ -32,6 +32,9 @@ box-shadow: 12px 12px 20px #cbced1,
     border-radius: 6px;
     box-shadow: inset 8px 8px 8px #cbced1,
                 inset -8px -8px 8px #ffffff;
+                display: flex;
+                justify-content: space-around;
+                flex-wrap: wrap;
 }
 
 .btns
